--- a/tox.ini
+++ b/tox.ini
@@ -14,11 +14,11 @@ commands = flake8 bootstrapvz/ --exclude=minify_json.py {posargs}
 deps =
     nose
     nose-cov
-commands = nosetests -v tests/unit --with-coverage --cover-package=bootstrapvz --cover-inclusive {posargs}
+commands = nosetests --with-coverage --cover-package=bootstrapvz --cover-inclusive --verbose {posargs:tests/unit}
 
 [testenv:integration]
 deps =
     nose
     Pyro4 >= 4.30
     pyvbox >= 0.2.0
-commands = nosetests -v tests/integration --with-coverage --cover-package=bootstrapvz --cover-inclusive {posargs}
+commands = nosetests --with-coverage --cover-package=bootstrapvz --cover-inclusive --verbose {posargs:tests/integration}
